[bp/r60043][FIX] Improved text color contrast to meet WCAG Level AA. Should fix bug 6145. Thanks, chealer.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@60044 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/business/less/bootstrap-variables.less
+++ b/themes/business/less/bootstrap-variables.less
@@ -8,17 +8,17 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base: #4a4a4a;
+@gray-base: darken(@gray,20%);
 // #000000;
-@gray-darker: lighten(@gray-base, 13.5%);
+@gray-darker: darken(@gray, 15%);
 // #222
-@gray-dark: lighten(@gray-base, 20%);
+@gray-dark: darken(@gray, 10%);
 // #333
-@gray: lighten(@gray-base, 33.5%);
+@gray: #737373; //lighten(@gray-base, 33.5%);
 // #555
-@gray-light: lighten(@gray-base, 46.7%);
+@gray-light: lighten(@gray, 10%);
 // #777
-@gray-lighter: lighten(@gray-base, 93.5%);
+@gray-lighter: lighten(@gray, 20%);
 // #eee
 
 @brand-primary: #0082e0;
